--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "yup": "^0.29.1"
   },
